k8s-manifests/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-1-deployment
  labels:
    app: nginx-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-1
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
      - name: nginx
        image: nginx:1.16
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /etc/nginx/nginx.conf # mount nginx-conf volumn to /etc/nginx
            subPath: nginx.conf
            readOnly: true
            name: nginx-1-conf
      volumes:
      - name: nginx-1-conf
        configMap:
          name: nginx-1-conf # place ConfigMap `nginx-1-conf` on /etc/nginx
          items:
            - key: nginx.conf
              path: nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-1-service
spec:
  selector:
    app: nginx-1
  ports:
  - port: 9009
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-2-deployment
  labels:
    app: nginx-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-2
  template:
    metadata:
      labels:
        app: nginx-2
    spec:
      containers:
      - name: nginx
        image: nginx:1.17.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-2-service
spec:
  selector:
    app: nginx-2
  ports:
  - port: 9010
    targetPort: 80
