k8s-manifests/vs_test_03.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - headers:
        version:
          exact: "1"
    route:
    - destination:
        port:
          number: 9009
        host: nginx-1-service
  - match:
    - headers:
        version:
          exact: "2"
    route:
    - destination:
        port:
          number: 9010
        host: nginx-2-service
