k8s-manifests/vs_test_04.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - route:
    - destination:
        port:
          number: 9009
        host: nginx-1-service
    fault:
      abort:
        percentage:
          value: 50
        httpStatus: 400
