k8s-manifests/vs_test_05.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - route:
    - destination:
        port:
          number: 9009
        host: nginx-1-service
    mirror:
      port:
        number: 9010
      host: nginx-2-service
